# slop-streamer

./: Cargo.toml  LICENSE-2.0.txt  LICENSE-MIT.txt  readme.md
crates/slop-streamer/: Cargo.toml
crates/slop-streamer-proc-macros/: Cargo.toml
crates/slop-streamer-proc-macros/src/: lib.rs
crates/slop-streamer-proc-macros/src/contract/: mod.rs
crates/slop-streamer-proc-macros/src/contract/field/: const_field.rs  field.rs  mod.rs
crates/slop-streamer/samples/anthropic_claude-sonnet-4.5/: sample1_representative.txt  sample2_web_search.txt  sample3_rejected.txt
crates/slop-streamer/samples/google_gemini-3-pro-preview/: sample1_representative.txt  sample2_web_search.txt  sample3_rejected.txt
crates/slop-streamer/samples/openai_gpt-5.2/: sample1_representative.txt  sample2_web_search.txt  sample3_rejected.txt
crates/slop-streamer/samples/z-ai_glm-4.7-flash/: sample1_representative.txt  sample2_web_search.txt  sample3_rejected.txt
crates/slop-streamer/src/: const_str.rs  lib.rs  tool.rs
crates/slop-streamer/src/openai_compat/: mod.rs
crates/slop-streamer/src/openai_compat/endpoint/responses/: contract_macro.rs  mod.rs
crates/slop-streamer/src/openai_compat/endpoint/responses/request/: input_type.rs  mod.rs  tool_choice.rs
crates/slop-streamer/src/openai_compat/endpoint/responses/stream/: mod.rs
crates/slop-streamer/src/openai_compat/endpoint/responses/stream/stream_item/: mod.rs
